[project]
name = "asvector"
description = "Vectorize your Python functions"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["vectorize", "function", "arguments"]
authors = [
  { name="JosephBARBIERDARNAL", email="JosephBARBIERDARNAL@mail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = []

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["asvector"]

[tool.uv.sources]
asvector = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

[project.urls]
Issues = "https://github.com/JosephBARBIERDARNAL/asvector/issues"
Repository = "https://github.com/JosephBARBIERDARNAL/asvector"
